--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <p>salam</p>
-    <h1>osman</h1>
-    
+    <h1>Osman</h1>
+    <div>Ali</div>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus est sunt totam incidunt non harum! Iste deserunt error quam. Sunt vitae illum corporis hic magni harum quidem nemo perferendis ex.</p>
 </body>
 </html>
+<style>
+    div{
+        color: aqua;
+    }
+</style>
